[package]
name = "fust_tutorials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
timer_future = { path = "../timer_future" }
lazy_static = "*"
once_cell = "1.17.0"
arc-swap = "1.6.0"
regex = "*"
tokio = { version = "1", features = ["full"] }